@@ -87,8 +87,23 @@ MonitorFactory::initialize()
 {
 }
 
+int
+MonitorFactory::service_initialize()
+{
+  return ACE_Service_Config::process_directive(ace_svc_desc_MonitorFactory);
+}
+
 } // namespace DCPS
 } // namespace OpenDDS
 
 using namespace OpenDDS::DCPS;
 
+
+ACE_FACTORY_DEFINE (OpenDDS_Dcps, MonitorFactory)
+ACE_STATIC_SVC_DEFINE (MonitorFactory,
+                       ACE_TEXT ("OpenDDS_Monitor_Default"),
+                       ACE_SVC_OBJ_T,
+                       &ACE_SVC_NAME (MonitorFactory),
+                       ACE_Service_Type::DELETE_THIS |
+                         ACE_Service_Type::DELETE_OBJ,
+                       0)
