@@ -111,7 +111,6 @@ Service_Participant::Service_Participant()
 Service_Participant::~Service_Participant()
 {
   delete monitor_;
-  delete monitor_factory_;
 }
 
 Service_Participant *
@@ -379,7 +378,8 @@ Service_Participant::get_domain_participant_factory(int &argc,
           ACE_Dynamic_Service<MonitorFactory>::instance ("OpenDDS_Monitor");
         if (this->monitor_factory_ == 0) {
           // Use the stubbed factory
-          this->monitor_factory_ = new MonitorFactory;
+          this->monitor_factory_ = 
+            ACE_Dynamic_Service<MonitorFactory>::instance ("OpenDDS_Monitor_Default");
         }
         this->monitor_ = this->monitor_factory_->create_sp_monitor(this);
 
