@@ -1,3 +1,12 @@
+Wed May 11 13:49:07 UTC 2011  Paul Calabrese  <calabrese_p@ociweb.com>
+
+        * dds/DCPS/MonitorFactory.h:
+        * dds/DCPS/MonitorFactory.cpp:
+        * dds/DCPS/Service_Participant.cpp:
+
+          Fix a static destruction problem in the monitor code by always
+          use the ACE service mechanism (it was previously a mix).
+
 Fri May  6 14:20:44 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/tests/modeling_tests.lst:
